# llm-consistency

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: 01_basic_mock.py  02_dry_run.py  03_checkpoint_resume.py  04_custom_scorer.py  05_export_formats.py  06_compare_models.py  README.md  _helpers.py
examples/datasets/: sample.jsonl
src/llm_consistency/: __init__.py  _config_loader.py  _exceptions.py  _version.py  cli.py  metrics.py  perturbations.py  providers.py  runners.py  scoring.py  types.py
src/llm_consistency/datasets/: __init__.py  _base.py  _custom.py  _mc.py  _open_ended.py  _validation.py
src/llm_consistency/providers/: __init__.py  _anthropic.py  _base.py  _batch_result.py  _budget.py  _cost.py  _litellm.py  _mock.py  _ollama.py  _openai.py  _rate_limit.py  _retry.py
src/llm_consistency/reports/: __init__.py  _car_ascii.py  _console.py  _csv_export.py  _html_export.py  _json_export.py  _markdown_export.py
src/llm_consistency/runners/: __init__.py  _batch.py  _checkpoint.py  _ci.py  _metadata.py  _pipeline.py  _streaming.py
tests/: conftest.py  test_cli.py  test_config_loader.py  test_datasets.py  test_datasets_hub.py  test_metrics.py  test_perturbations.py  test_providers.py  test_providers_anthropic.py  test_providers_api.py  test_providers_base.py  test_providers_batch_result.py  test_providers_budget.py  test_providers_cost.py  test_providers_litellm.py  test_providers_mock.py  test_providers_ollama.py  test_providers_openai.py  test_providers_rate_limit.py  test_providers_retry.py  test_reports.py  test_reports_console.py  test_reports_json.py  test_runners.py  test_runners_batch.py  test_runners_checkpoint.py  test_runners_ci.py  test_runners_streaming.py  test_scoring.py  test_types.py
