[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llm-consistency"
dynamic = ["version"]
description = "Evaluate LLM consistency under input perturbation using CAT framework metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = ["ollama>=0.3"]
litellm = ["litellm>=1.40"]
embeddings = ["sentence-transformers>=3.0"]
all = [
    "llm-consistency[openai,anthropic,ollama,litellm,embeddings]",
]

[project.scripts]
llm-consistency = "llm_consistency.cli:main"

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff>=0.15.1",
]
type = [
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "type"},
]

# --- Build ---

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/llm_consistency/_version.py"

# --- Testing ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=llm_consistency",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["llm_consistency"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]

# --- Type Checking ---

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["openai", "openai.*", "anthropic", "anthropic.*", "ollama", "ollama.*", "litellm", "litellm.*"]
ignore_missing_imports = true

# --- Linting ---

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
exclude = ["src/llm_consistency/_version.py"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "N",
    "D", "C4", "RUF", "TC", "PERF", "T20", "RET", "PTH", "ARG", "PL",
]
ignore = [
    "D100",     # Missing module docstring (allow for __init__.py)
    "D104",     # Missing public package docstring
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ARG", "PLR2004", "T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["llm_consistency"]
